# RCV

./: .env.example  .gitignore  Dockerfile  Makefile  PLAN.md  Procfile  README.md  app.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  render.yaml  requirements.txt  rxconfig.py
.github/: copilot-instructions.md
.github/instructions/: refactor.instructions.md  stack-python-reflex.instructions.md
.github/prompts/: rcvco-assistant.prompt.md  rcvco-refactor.prompt.md  rcvco-scaffold-web.prompt.md
.github/workflows/: ci.yml
ERC/: ERC.py
RCV_APP/services/: labs.py  report.py  risk.py  tfg.py
app/logic/: patient_eval.py
assets/js/: api.js  labs.js  modal.js  state.js
assets/legacy/: cardiaia.html
assets/legacy/components/: document-upload.html
docs/: ARCHITECTURE.md
e2e/: README.md  medication_dedupe.spec.ts  report_generation.spec.ts  upload_autofill.spec.ts
rcvco/: config.py
rcvco.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rcvco/adapters/: ui_bridge.py
rcvco/adapters/llm/: base.py  factory.py  gemini_client.py  openai_client.py
rcvco/api/: app.py  endpoints.py  routes.py
rcvco/api/schemas/: patient.py
rcvco/core/: calculos.py  metas.py  riesgo.py
rcvco/domain/: assistant.py  labs.py  models.py  rcv_rules.py  report.py  risk.py  scoring.py  tfg.py
rcvco/ingest/: parsers.py
rcvco/parsing/: labs.py  parser.py
rcvco/services/: content_service.py  patient_service.py  report_service.py
rcvco/ui/: __init__.py  calculos.py  catalogs.py  theme.css  theme.py  types.py
rcvco/ui/components/: accordion.py  cards.py  footer.py  forms.py  hero.py  layout.py  meds.py  modals.py  risk_panel.py  seo.py
rcvco/ui/pages/: admin_content.py  cardiaia.py  cardiaia.py.tmp  index.py  landing.py  (+2 more)
tests/: conftest.py  test_agenda_labs_v2.py  test_assistant.py  test_calculos_module.py  test_cockcroft_gault.py  test_labs.py  test_labs_mapping.py  test_llm_factory.py  test_medications_endpoint.py  test_parsers.py  test_patient_eval (1).py  test_puntaje_programa.py  test_report.py  test_report_endpoint.py  test_riesgo_4_pasos.py  test_risk.py  test_scoring.py  test_tfg.py  test_ui_calculos.py
tests/core/: test_calculos_tfg.py  test_clasificacion_riesgo.py  test_metas_puntajes.py
(+5 files in other folders)
