#############################################
# Unified project metadata (Pydantic v2)
#############################################
[project]
name = "rcvco"
version = "0.1.0"
description = "RCV-CO Web (lógica clínica + UI Reflex)"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Anon" }]
dependencies = [
  "pydantic>=2.7,<3",
  "reflex>=0.4.0",
  "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "black>=24.0",
  "ruff>=0.5.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# Explicit package discovery to avoid accidental inclusion of other top-level dirs
[tool.setuptools.packages.find]
include = ["rcvco*"]
exclude = ["tests*", "assets*", "ERC*", "RCV IA*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
