#############################################
# Unified project metadata (Pydantic v2)
#############################################
[project]
name = "rcvco"
version = "0.1.0"
description = "RCV-CO Web (lógica clínica + UI Reflex)"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Anon" }]
dependencies = [
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2.1",
  "reflex>=0.4.0",
  "httpx>=0.27.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0.0",
  "black>=24.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "httpx>=0.27.0",
  "pydantic-settings"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# Explicit package discovery to avoid accidental inclusion of other top-level dirs
[tool.setuptools.packages.find]
include = ["rcvco*"]
exclude = ["tests*", "assets*", "ERC*", "RCV IA*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
